# AOS2022_scut

./: README.md
aos2022_lab1/: README.md  lab1-file-io.md
aos2022_lab1/c/: CMakeLists.txt
aos2022_lab1/c/include/: lc.h
aos2022_lab1/c/main/: lc.c
aos2022_lab1/c/src/: lcTools.c
aos2022_lab1/test_dir/: 1000_20.txt
aos2022_lab2/: lab2-thread.md
aos2022_lab2/c/: CMakeLists.txt
aos2022_lab2/c/include/: lc.h
aos2022_lab2/c/main/: lc  lc.c
aos2022_lab2/c/src/: lcTools.c  threadTools.c
aos2022_lab2/test_dir/cpp-proj/: 50_10.h  80_25.cpp
test_dir/cpp-proj/: 100_15.cpp  20_10.txt
test_dir/cpp-proj/sub_dir/: 10_5.txt
